--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -196,9 +196,42 @@ background: rgba(0,0,0,0.5);
     color: WHITE;
 }
 
-
-
-
+/*cards*/
+.url-card .url-body {
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: url("/assets/images/pattern.webp");
+        background-size:100% 70px;
+        transform: skewX(-8deg);
+        border-radius: 12px;
+        font-size: 20px;
+        opacity: .7;
+        box-shadow:2px 2px 2px 0px rgba(0,36,100,.1);
+        -webkit-box-shadow:2px 2px 2px 0px rgba(0,36,100,.1);
+        -moz-box-shadow:2px 2px 2px 0px rgba(0,36,100,.1);
+        -webkit-transition:all 0.3s ease;-moz-transition:all 0.3s ease;-o-transition:all 0.3s ease;transition:all 0.3s ease
+}
+}
+.url-card .url-body:hover {
+    &::before {
+        content: "";
+        box-shadow: 0px 0px 20px -5px rgba(158,158,158,.2);
+        transition: background-color .3s;
+        transform:skewX(-8deg);
+        box-shadow:0 26px 40px -24px rgba(0,36,100,.3);
+        -webkit-box-shadow:0 26px 40px -24px rgba(0,36,100,.3);
+        -moz-box-shadow:0 26px 40px -24px rgba(0,36,100,.3);
+}
+}
+.card{
+    background-color: transparent;
+    box-shadow: none;
+}
 
 
 
