--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -208,6 +208,7 @@ background: rgba(0,0,0,0.5);
         background: url("/assets/images/pattern.webp");
         background-size:100% 70px;
         transform: skewX(-8deg);
+        -webkit-transform: skewX(-8deg);
         border-radius: 12px;
         font-size: 20px;
         opacity: .7;
@@ -223,6 +224,7 @@ background: rgba(0,0,0,0.5);
         box-shadow: 0px 0px 20px -5px rgba(158,158,158,.2);
         transition: background-color .3s;
         transform:skewX(-8deg);
+        -webkit-transform: skewX(-8deg);
         box-shadow:0 26px 40px -24px rgba(0,36,100,.3);
         -webkit-box-shadow:0 26px 40px -24px rgba(0,36,100,.3);
         -moz-box-shadow:0 26px 40px -24px rgba(0,36,100,.3);
